[project]
name = "knitwork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.1",
    "numpy>=2.0",
    "torch>=2.1",
    "numba>=0.61",
    "jupyterlab",
    "matplotlib",
    "scipy",
    "aim>=3.20",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["knitwork"]
